--- a/Prescription Text Localization and Classification/requirements.txt
+++ b/Prescription Text Localization and Classification/requirements.txt
@@ -3,6 +3,6 @@ numpy==1.18.4
 opencv-python-headless==4.2.0.32
 pandas==1.0.4
 Pillow==7.1.2
-scikit-learn==0.22.2.post1
+scikit-learn==0.20.1
 scipy==1.4.1
 sklearn==0.0
